Fixed: wflow-consoleweb - Fixed console header menu wrapping when translated labels are too long.
git-svn-id: http://dev.joget.org/svn/jw-community/trunk@244 1bff935d-2fe2-40b7-b00f-c2aca69a7612

--- a/wflow-consoleweb/src/main/webapp/css/v3.css
+++ b/wflow-consoleweb/src/main/webapp/css/v3.css
@@ -115,7 +115,7 @@ img {
     position: relative;
     top: -12px;
     left: 40px;
-    max-width: 920px;
+    max-width: 1050px;
 }
 #menu #menu-items {
     list-style: none;
